--- a/src/components/Model360Viewer.css
+++ b/src/components/Model360Viewer.css
@@ -2,6 +2,7 @@
   width: 100%;
   max-width: 600px;
   margin: 0 auto;
+  overflow: hidden;
 }
 
 .model-image-container {
@@ -59,6 +60,10 @@
   justify-content: center;
   width: 24px;
   height: 24px;
+  touch-action: manipulation;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  user-select: none;
 }
 
 .autoplay-toggle:hover {
